--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                                 <i class="fas fa-envelope"></i>
                                 <div>
                                     <h4 class="contact__subtitle">E-mail</h4>
-                                    <span class="contact__text">ana.silva@email.com</span>
+                                    <span class="contact__text">graziellyduarte@gmail.com</span>
                                 </div>
                             </div>
 
@@ -480,9 +480,9 @@
                 <div class="footer__contact">
                     <h3 class="footer__title">Contactos</h3>
                     <div class="footer__contact-info">
-                        <p><i class="fas fa-phone"></i> +351 912 345 678</p>
-                        <p><i class="fas fa-envelope"></i> ana.silva@email.com</p>
-                        <p><i class="fas fa-map-marker-alt"></i> Lisboa, Portugal</p>
+                        <p><i class="fas fa-phone"></i> 88 993365746</p>
+                        <p><i class="fas fa-envelope"></i> graziellyduarte@gmail.com</p>
+                        <p><i class="fas fa-map-marker-alt"></i> meruoca, ceará</p>
                     </div>
                 </div>
             </div>
